# jobFinder

./: .dockerignore  .gitignore  README.md  docker-compose.yml  jobFinder.Dockerfile  pyproject.toml
nginx/: nginx.conf  supervisord.conf  uwsgi.ini
src/: main.py  models.py  utils.py
tests/: fixtures.py  models_test.py
tests/fixtures/: test_job_seekers.json  test_profiles.json  test_users.json
