[tool.poetry]
name = "jobfinder"
version = "0.1.0"
description = "A little AI-powered tool to help find job postings that are actually relevant to your needs."
authors = ["Andrew Neher <aneher@sketchdev.io>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "3.0.3"
nltk = "3.8.1"
openai = "1.30.3"
pydantic = "2.7.1"
requests = "2.32.2"
weaviate-client = "^4.6.4"
beautifulsoup4 = "^4.12.3"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"
setuptools = "^1.0.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
